test/zora/fixtures/plan_no_assertion_fail_out.txt
TAP version 13
# Make a plan, don't do any assertions
file://$TAPE/index.js:$LINE
  function rethrow () { throw err }
                        ^

Error: Test ended before the planned number
          planned: 1
          actual: 0
        
    at Test.run (file://$TAPE/index.js:$LINE:$COL)
    at TestRunner.run (file://$TAPE/index.js:$LINE:$COL)
    at Timeout._onTimeout (file://$TAPE/index.js:$LINE:$COL)
    at listOnTimeout (node:internal/timers:$LINE:$COL)
    at process.processTimers (node:internal/timers:$LINE:$COL)
    